Additional model architecture added to backtesting page