@@ -1,28 +1,17 @@
 package com.richieloco.coinsniper.service;
 
-import ai.djl.Model;
-import ai.djl.MalformedModelException;
-import ai.djl.ndarray.NDArray;
-import ai.djl.ndarray.NDList;
-import ai.djl.ndarray.NDManager;
-import ai.djl.ndarray.types.DataType;
-import ai.djl.ndarray.types.Shape;
-import ai.djl.nn.Activation;
-import ai.djl.nn.SequentialBlock;
-import ai.djl.nn.core.Linear;
-import ai.djl.training.DefaultTrainingConfig;
-import ai.djl.training.EasyTrain;
-import ai.djl.training.Trainer;
-import ai.djl.training.dataset.ArrayDataset;
-import ai.djl.training.dataset.Batch;
-import ai.djl.training.dataset.Dataset;
-import ai.djl.training.listener.TrainingListener;
-import ai.djl.training.loss.Loss;
-import ai.djl.training.optimizer.Optimizer;
-import ai.djl.training.tracker.Tracker;
-import ai.djl.translate.TranslateException;
-import ai.djl.translate.Translator;
-import ai.djl.translate.TranslatorContext;
+import ai.djl.*;
+import ai.djl.ndarray.*;
+import ai.djl.ndarray.types.*;
+import ai.djl.nn.*;
+import ai.djl.nn.core.*;
+import ai.djl.training.*;
+import ai.djl.training.dataset.*;
+import ai.djl.training.listener.*;
+import ai.djl.training.loss.*;
+import ai.djl.training.optimizer.*;
+import ai.djl.training.tracker.*;
+import ai.djl.translate.*;
 import com.richieloco.coinsniper.dto.PredictionResult;
 import com.richieloco.coinsniper.dto.TrainingResult;
 import com.richieloco.coinsniper.entity.TradeDecisionRecord;
@@ -33,36 +22,28 @@ import org.springframework.stereotype.Service;
 import reactor.core.publisher.Mono;
 import reactor.core.scheduler.Schedulers;
 
-import java.io.BufferedWriter;
-import java.io.FileWriter;
-import java.io.IOException;
+import java.io.*;
 import java.time.Instant;
-import java.util.ArrayList;
-import java.util.List;
+import java.util.*;
 
 @Slf4j
 @Service
 public class DJLTrainingService {
-
-    private final List<Double> cumulativeLossPerEpoch = new ArrayList<>();
-    private final List<Double> cumulativeAccuracyPerEpoch = new ArrayList<>();
 
     private static final int EPOCHS = 8;
     private static final int BATCH_SIZE = 8;
 
     private final TradeDecisionRepository tradeDecisionRepository;
 
+    private final List<Double> cumulativeLossPerEpoch = new ArrayList<>();
+    private final List<Double> cumulativeAccuracyPerEpoch = new ArrayList<>();
+
+    @Getter
+    private TrainingResult lastTrainingResult = TrainingResult.builder().build();
+
     public DJLTrainingService(TradeDecisionRepository tradeDecisionRepository) {
         this.tradeDecisionRepository = tradeDecisionRepository;
     }
-
-    @Getter
-    private TrainingResult lastTrainingResult = TrainingResult.builder()
-            .lossPerEpoch(new ArrayList<>())
-            .accuracyPerEpoch(new ArrayList<>())
-            .averageAccuracy(0.0)
-            .modelSummary("")
-            .build();
 
     public Mono<TrainingResult> trainReactive(List<TradeDecisionRecord> history) {
         return Mono.fromCallable(() -> {
@@ -71,16 +52,45 @@ public class DJLTrainingService {
             cumulativeLossPerEpoch.addAll(result.getLossPerEpoch());
             cumulativeAccuracyPerEpoch.addAll(result.getAccuracyPerEpoch());
 
-            double avgAccuracy = cumulativeAccuracyPerEpoch.stream()
-                    .mapToDouble(Double::doubleValue)
-                    .average()
-                    .orElse(0.0);
+            double avgAccuracy = cumulativeAccuracyPerEpoch.stream().mapToDouble(Double::doubleValue).average().orElse(0.0);
+            double avgLoss = cumulativeLossPerEpoch.stream().mapToDouble(Double::doubleValue).average().orElse(0.0);
+
+            StringBuilder summary = new StringBuilder();
+            summary.append("Trained for total ")
+                    .append(cumulativeLossPerEpoch.size())
+                    .append(" epochs.\n\n")
+                    .append("Model Block Summary:\n")
+                    .append(result.getModelSummary());
 
             lastTrainingResult = TrainingResult.builder()
                     .lossPerEpoch(new ArrayList<>(cumulativeLossPerEpoch))
                     .accuracyPerEpoch(new ArrayList<>(cumulativeAccuracyPerEpoch))
                     .averageAccuracy(avgAccuracy)
-                    .modelSummary("Trained for total " + cumulativeLossPerEpoch.size() + " epochs.")
+                    .averageLoss(avgLoss)
+                    .finalLoss(result.getFinalLoss())
+                    .finalAccuracy(result.getFinalAccuracy())
+                    .epochs(cumulativeLossPerEpoch.size())
+                    .batchSize(BATCH_SIZE)
+                    .architecture("Linear(1→8) → ReLU → Linear(8→1) → Sigmoid")
+                    .optimizer("Adam (LR=0.001)")
+                    .customSummary(String.format("""
+                                DJL Training Summary (Cumulative):
+                                Architecture: %s
+                                Optimizer: %s
+                                Total Epochs: %d
+                                Batch Size: %d
+                                Final Loss: %.4f
+                                Final Accuracy: %.2f%%
+                                Avg Accuracy: %.2f%%
+                            """,
+                            "Linear(1→8) → ReLU → Linear(8→1) → Sigmoid",
+                            "Adam (LR=0.001)",
+                            cumulativeLossPerEpoch.size(),
+                            BATCH_SIZE,
+                            result.getFinalLoss(),
+                            result.getFinalAccuracy() * 100,
+                            avgAccuracy * 100
+                    ))
                     .build();
 
             return lastTrainingResult;
@@ -103,21 +113,15 @@ public class DJLTrainingService {
                     .add(Activation.reluBlock())
                     .add(Linear.builder().setUnits(1).build())
                     .add(Activation.sigmoidBlock());
+
             model.setBlock(block);
 
-            float[][] features;
-            float[] labels;
-            if (tradeData == null || tradeData.isEmpty()) {
-                features = new float[][]{{0f}, {1f}};
-                labels = new float[]{0f, 1f};
-            } else {
-                features = new float[tradeData.size()][1];
-                labels = new float[tradeData.size()];
-                for (int i = 0; i < tradeData.size(); i++) {
-                    float x = (float) Math.max(0.0, Math.min(10.0, tradeData.get(i).getRiskScore())) / 10.0f;
-                    features[i][0] = x;
-                    labels[i] = tradeData.get(i).isTradeExecuted() ? 1f : 0f;
-                }
+            float[][] features = tradeData.isEmpty() ? new float[][]{{0f}, {1f}} : new float[tradeData.size()][1];
+            float[] labels = tradeData.isEmpty() ? new float[]{0f, 1f} : new float[tradeData.size()];
+
+            for (int i = 0; i < tradeData.size(); i++) {
+                features[i][0] = (float) Math.max(0.0, Math.min(10.0, tradeData.get(i).getRiskScore())) / 10.0f;
+                labels[i] = tradeData.get(i).isTradeExecuted() ? 1f : 0f;
             }
 
             Dataset dataset = new ArrayDataset.Builder()
@@ -128,15 +132,13 @@ public class DJLTrainingService {
 
             Loss loss = Loss.sigmoidBinaryCrossEntropyLoss();
             Optimizer optimizer = Optimizer.adam().optLearningRateTracker(Tracker.fixed(0.001f)).build();
-            DefaultTrainingConfig config = new DefaultTrainingConfig(loss)
-                    .optOptimizer(optimizer)
-                    .addTrainingListeners(TrainingListener.Defaults.logging());
+            DefaultTrainingConfig config = new DefaultTrainingConfig(loss).optOptimizer(optimizer).addTrainingListeners(TrainingListener.Defaults.logging());
 
             List<Double> lossPerEpoch = new ArrayList<>();
             List<Double> accPerEpoch = new ArrayList<>();
 
             try (Trainer trainer = model.newTrainer(config)) {
-                trainer.initialize(manager.create(features).getShape());
+                trainer.initialize(new Shape(1, 1));
                 for (int epoch = 0; epoch < EPOCHS; epoch++) {
                     for (Batch batch : trainer.iterateDataset(dataset)) {
                         try (batch) {
@@ -151,13 +153,20 @@ public class DJLTrainingService {
                 }
             }
 
-            double avgAcc = accPerEpoch.stream().mapToDouble(d -> d).average().orElse(0.0);
+            double avgAcc = accPerEpoch.stream().mapToDouble(Double::doubleValue).average().orElse(0.0);
 
             return TrainingResult.builder()
                     .lossPerEpoch(lossPerEpoch)
                     .accuracyPerEpoch(accPerEpoch)
                     .averageAccuracy(avgAcc)
-                    .modelSummary(model.toString())
+                    .finalLoss(lossPerEpoch.get(lossPerEpoch.size() - 1))
+                    .finalAccuracy(accPerEpoch.get(accPerEpoch.size() - 1))
+                    .averageLoss(lossPerEpoch.stream().mapToDouble(Double::doubleValue).average().orElse(0.0))
+                    .epochs(EPOCHS)
+                    .batchSize(BATCH_SIZE)
+                    .architecture("Linear(1→8) → ReLU → Linear(8→1) → Sigmoid")
+                    .optimizer("Adam (LR=0.001)")
+                    .modelSummary(model.getBlock().toString())
                     .build();
 
         } catch (IOException | TranslateException e) {
@@ -169,13 +178,11 @@ public class DJLTrainingService {
             throws IOException, MalformedModelException, TranslateException {
         float x = (float) Math.max(0.0, Math.min(10.0, riskScore)) / 10.0f;
         try (Model model = Model.newInstance("coin-sniper-model", "PyTorch")) {
-
-            SequentialBlock block = new SequentialBlock()
+            model.setBlock(new SequentialBlock()
                     .add(Linear.builder().setUnits(8).build())
                     .add(Activation.reluBlock())
                     .add(Linear.builder().setUnits(1).build())
-                    .add(Activation.sigmoidBlock());
-            model.setBlock(block);
+                    .add(Activation.sigmoidBlock()));
 
             try (Trainer trainer = model.newTrainer(new DefaultTrainingConfig(Loss.sigmoidBinaryCrossEntropyLoss()))) {
                 trainer.initialize(new Shape(1, 1));
@@ -222,19 +229,14 @@ public class DJLTrainingService {
                 for (int i = 0; i < features.length; i++) {
                     float p = predictor.predict(new float[]{features[i][0]});
                     float y = labels[i];
-
-                    double lp = Math.min(Math.max(p, (float) eps), 1.0 - eps);
+                    double lp = Math.min(Math.max(p, eps), 1.0 - eps);
                     double l = -(y * Math.log(lp) + (1 - y) * Math.log(1 - lp));
                     totalLoss += l;
-
-                    int predLbl = p >= 0.5f ? 1 : 0;
-                    if (predLbl == (int) y) correct++;
+                    if ((p >= 0.5f ? 1 : 0) == (int) y) correct++;
                 }
             }
 
-            double avgLoss = features.length > 0 ? (totalLoss / features.length) : 0.0;
-            double acc = features.length > 0 ? (double) correct / features.length : 0.0;
-            return new EvalStats(avgLoss, acc);
+            return new EvalStats(totalLoss / features.length, (double) correct / features.length);
 
         } catch (TranslateException e) {
             log.warn("Evaluation failed: {}", e.getMessage());
@@ -244,15 +246,11 @@ public class DJLTrainingService {
 
     private record EvalStats(double loss, double accuracy) {}
 
-    public void logToFile(List<TradeDecisionRecord> history) {
-        logToFile(history, "logs/training_log.tsv");
-    }
-
     public void logToFile(List<TradeDecisionRecord> history, String filePath) {
         try (BufferedWriter writer = new BufferedWriter(new FileWriter(filePath, true))) {
             writer.write("CoinSymbol\tExchange\tRiskScore\tExecuted\tTimestamp\n");
             for (TradeDecisionRecord td : history) {
-                writer.write(String.format("%s\t%s\t%.2f\t%b\t%s\n",
+                writer.write("%s\t%s\t%.2f\t%b\t%s\n".formatted(
                         td.getCoinSymbol(), td.getExchange(), td.getRiskScore(),
                         td.isTradeExecuted(), td.getTimestamp()));
             }
